--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Setu - Modern 3D Navigation</title>
     <meta name="description" content="Tech Setu IT Company - Modern 3D Navigation Effects" />
@@ -55,15 +55,7 @@
   </head>
 
   <body>
-    <div id="root">
-      <div class="loading-fallback">
-        <div style="text-align: center;">
-          <div class="loading-spinner"></div>
-          <p>Loading Tech Setu...</p>
-        </div>
-      </div>
-    </div>
-    
-    <script type="module" src="./src/main.jsx"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
