--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/tech-setu-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Setu - Modern 3D Navigation</title>
     <meta name="description" content="Tech Setu IT Company - Modern 3D Navigation Effects" />
